--- a/AppLibreria_01/app/views/layouts/application.html.erb
+++ b/AppLibreria_01/app/views/layouts/application.html.erb
@@ -101,7 +101,8 @@
             <%= bootstrap_flash %>
             <%= yield %>
           </div>
-          <div class="span3">
+          <!-- 
+            <div class="span3">
             <div class="well sidebar-nav">
               <h3>Sidebar</h3>
               <ul class="nav nav-list">
@@ -110,10 +111,16 @@
                 <li><%= link_to "Link2", "/path2"  %></li>
                 <li><%= link_to "Link3", "/path3"  %></li>
               </ul>
-            </div><!--/.well -->
+            </div><!--/.well 
+          -->   
+            <div class="span3">
+         
           </div><!--/span-->
         </div><!--/row-->
-
+  <br/>
+                <p/>
+                 <br/>
+                <p/>
       <footer>
         <p>&copy; Company 2014</p>
       </footer>
