--- a/AppLibreria_01/app/assets/stylesheets/application.css
+++ b/AppLibreria_01/app/assets/stylesheets/application.css
@@ -10,6 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
- */
+/*
+
+*= require dataTables/jquery.dataTables
+*= require dataTables/bootstrap/2/jquery.dataTables.bootstrap
+*= require_tree .
+*= require_self
+*/
