--- a/AppLibreria_01/app/views/books/index.html.erb
+++ b/AppLibreria_01/app/views/books/index.html.erb
@@ -1,45 +1,38 @@
 <center><h1>LIBROS</h1></center>
 
-<li><%= link_to 'Ver todos los Resgistros de Libros', books_path  %></li><br>
-<%= form_tag(books_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-    <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "buscar Libros" %>
-      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead 
-           of using a Rails form helper -->
-      <button class="btn" type="submit"><i class="icon-search"></i> OK</button>
-    </div>
+<table id="datatable_books" class="table table-striped">
+ <thead>
+  <tr>
+   <th>Nombre</th>
+   <th>Autor</th>
+   <th>Editorial</th>
+   <th>Precio</th>
+   <th>Categoria</th>
+   <th>Proveedor</th>
+   <th></th>
+   <th></th>
+   <th></th>
+  </tr>
+ </thead>
+
+ <tbody>
+  <% @articles.each do |articles| %>
+    <tr>
+      <td><%= articles.nombrelibro %></td>
+      <td><%= articles.autor %></td>
+      <td><%= articles.editorial %></td>
+      <td><%= articles.precio %></td>
+      <td><%= articles.category.nombre %></td>
+      <td><%= articles.provider.razonsocial %></td>
+      
+       <td><%= link_to 'Show', articles %></td>
+        <td><%= link_to 'Edit', edit_book_path(articles) %></td>
+        <td><%= link_to 'Destroy', articles, method: :delete, data: { confirm: 'Are you sure?' } %>
+     
+       </td>
+   </tr>
   <% end %>
-  <br>
-
-  <div class="article">
-    <table border="1"  cellspacing="0" bordercolor="#2C1414" class="table table-striped">
-      <thead>
-        <tr>
-        <th>Nombre:</th>
-        <th>Autor</th>
-        <th>Editorial</th>
-      <th>Precio</th>
-      <th>Categoria</th>
-      <th>Proveedor</th>
-        <th colspan="3">Acciones</th>
-        </tr>
-
-      </thead>
-      <tbody>
-        <% @articles.each do |article| %>
-        <tr>
-    <td><%= link_to article.nombrelibro, article %></td>
-     <td><%= article.autor %></td>
-        <td><%= article.editorial %></td>
-        <td><%= article.precio %></td>
-        <td><%= article.category %></td>
-        <td><%= article.provider %></td>
-      <td><%= link_to 'Mostrar', article %></td>
-        <td><%= link_to 'Editar', edit_book_path(article) %></td>
-        <td><%= link_to 'Eliminar', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-     <% end %>
-     </tr></tbody>
-    </table>
-  </div>
+ </tbody>
+</table>
 
 <%= link_to 'New Book', new_book_path %>
